@@ -1,3 +1,9 @@
+116
+-- fixed valgrind leak
+-- observed memory corruption on Linux when loading dynamic plugins (not
+fixed)
+-- fixed action leak
+
 115
 -- remove share.h
 -- misc FIXITs
